tests/e2e/pass/m12_struct.ep
# EXIT: 50

type Point {
    x: i64
    y: i64
}

fun main(): void {
    let p = new Point {}
    p.x = 30
    p.y = 20
    exit(p.x + p.y)
}
