tests/e2e/fail/cstr_type_declaration.ep
# COMPILE_ERROR: reserved type name 'cstr'
type cstr {
    value: i64
}

fun main(): void {
}
